# rust-deeplearning

./: .clippy.toml  .gitattributes  .gitignore  .typos.toml  Cargo.toml  README.md  rdl  rust-toolchain.toml
audiolearn/app/: Cargo.toml  Dioxus.toml
audiolearn/app/assets/: styles.css
audiolearn/app/doc/: designs.md  tts-integration.md
audiolearn/app/examples/: tts_demo.rs
audiolearn/app/main/src/: lib.rs  main.rs
audiolearn/app/main/src/api/: error.rs  mod.rs  models.rs  services.rs  types.rs
audiolearn/app/main/src/core/: app.rs  audio_context.rs  audio_test.rs  components.rs  course_service.rs  create_tests.rs  edge_tts.rs  mod.rs  native_tts.rs  pages.rs  playback_state.rs  rodio_player.rs  sample_data.rs  search.rs  settings.rs  tts_manager.rs  tts_tests.rs  web_tts.rs
audiolearn/app/main/src/saf/: mod.rs
audiolearn/app/main/src/spi/: analytics.rs  audio.rs  mod.rs  storage.rs  tts.rs
audiolearn/tauri/: Cargo.toml
audiolearn/tauri/main/src/: lib.rs
audiolearn/tauri/main/src/api/: mod.rs
audiolearn/tauri/main/src/core/: commands.rs
audiolearn/tauri/main/src/saf/: mod.rs
components/: Cargo.toml
components/main/src/: lib.rs
components/main/src/api/: types.rs
components/main/src/core/: alert.rs  avatar.rs  badge.rs  button.rs  card.rs  dropdown.rs  icon.rs  input.rs  mod.rs  modal.rs  progress.rs  select.rs  spinner.rs  table.rs  tabs.rs  toast.rs  tooltip.rs
components/main/src/saf/: mod.rs
rustml/: BACKLOG.md  Cargo.toml
rustml/cli/: Cargo.toml
rustml/cli/src/: main.rs
rustml/cli/src/cmd/: gguf.rs  hub.rs  infer.rs  mod.rs  tokenizer.rs
rustml/core/: Cargo.toml  README.md
rustml/core/main/src/: lib.rs
rustml/core/main/src/api/: error.rs  types.rs
rustml/core/main/src/core/: arena.rs  mod.rs  runtime.rs  shape.rs  tensor.rs
rustml/core/main/src/saf/: mod.rs
rustml/experimentation/: TimeSeriesML_framework_design.md  llm_framework_design.md
rustml/experimentation/llmforge/: ARCHIVED.md  BACKLOG.md  Cargo.toml  build_log.txt  build_log_2.txt  build_log_4.txt  build_log_5.txt  build_log_6.txt  build_log_7.txt  build_log_8.txt  build_log_9.txt  llmf
rustml/experimentation/llmforge/cli/: Cargo.toml
rustml/experimentation/llmforge/cli/src/: args.rs  gguf_tokenizer.rs  main.rs  model_source.rs
rustml/experimentation/llmforge/docs/testing/: manual_cli_tests.md  manual_inference_tests.md  manual_launcher_tests.md  manual_model_tests.md  manual_testing.md
rustml/experimentation/llmforge/examples/: gguf_inference.rs  gpt2_inference.rs  interactive_gen.rs  logit_dump.rs  q4_matmul_bench.rs  q4_quality_compare.rs  tensor_bench.rs
rustml/experimentation/llmforge/lib/: common.sh
rustml/experimentation/llmforge/scripts/: logit_reference.sh
rustml/experimentation/llmforge/src/: config.rs  error.rs  lib.rs
rustml/experimentation/llmforge/src/attention/: cross.rs  mod.rs
rustml/experimentation/llmforge/src/core/: arena.rs  mod.rs
rustml/experimentation/llmforge/src/inference/: batch.rs  beam.rs  generator.rs  mod.rs  sampling.rs
rustml/experimentation/llmforge/src/loader/: gguf.rs  mod.rs  weight_map.rs
rustml/experimentation/llmforge/src/models/: mod.rs
rustml/experimentation/llmforge/src/nn/: mod.rs
rustml/experimentation/llmforge/src/quantization/: mod.rs  simd.rs
rustml/experimentation/llmforge/src/tokenization/: mod.rs
rustml/experimentation/llmforge/src/transformer/: mod.rs
rustml/experimentation/llmforge/tests/: arena_test.rs  attention_test.rs  cache_layout_test.rs  dtype_conversion_test.rs  generation_test.rs  inference_test.rs  integration_test.rs  loader_test.rs  model_arch_test.rs  model_compat_test.rs  model_test.rs  nn_layers_test.rs  parallelism_test.rs  quantization_q4_test.rs  quantization_test.rs  safetensors_test.rs  safety_test.rs  simd_test.rs  tensor_ops_extended_test.rs  tensor_ops_test.rs  tensor_views_test.rs  transformer_test.rs  weight_loading_test.rs
rustml/experimentation/llmforge/tests/common/: mod.rs
rustml/gguf/: Cargo.toml
rustml/gguf/main/src/api/: error.rs  types.rs
rustml/gguf/main/src/core/: mod.rs  parser.rs  weight_map.rs
rustml/gguf/main/src/saf/: mod.rs
rustml/gguf/tests/: cli.rs
rustml/hub/: Cargo.toml
rustml/hub/main/src/: lib.rs
rustml/hub/main/src/api/: error.rs  mod.rs  types.rs
rustml/hub/main/src/core/: hub_api.rs  mod.rs  safetensors.rs  weight_mapper.rs
rustml/hub/main/src/saf/: mod.rs
rustml/hub/tests/: cli.rs
rustml/nlp/: Cargo.toml
rustml/nlp/benches/: sampling.rs
rustml/nlp/examples/: gemma3_gguf.rs  gemma3_load.rs  gguf_inspect.rs  gpt2_generate.rs  tokenizer_verifier.rs  unified_model_demo.rs
rustml/nlp/main/src/: lib.rs
rustml/nlp/main/src/api/: error.rs  types.rs
rustml/nlp/main/src/core/: generation.rs  generator.rs  gguf_bridge.rs  gpt.rs  mod.rs  model.rs  sampling.rs  weight_map.rs
rustml/nlp/main/src/saf/: mod.rs
rustml/nlp/tests/: forward_diagnostic_test.rs  infer_cli.rs  logit_verifier_test.rs  tokenizer_verifier_test.rs
rustml/nlp/tests/fixtures/: gemma3_reference_logits.json
rustml/nn/: Cargo.toml
rustml/nn/main/src/: lib.rs
rustml/nn/main/src/api/: error.rs  mod.rs  traits.rs  types.rs
rustml/nn/main/src/core/: mod.rs  (+11 more)
rustml/nn/tests/: bench_optimizations.rs
rustml/quant/: Cargo.toml
rustml/quant/main/src/: lib.rs
rustml/swets/: .gitignore  Cargo.toml  README.md
rustml/swets/docs/: README.md  glossary.md
rustml/swets/docs/1-requirements/: brd.spec  brd.spec.yaml  srs.md
rustml/swets/docs/3-design/: architecture.md
rustml/swets/docs/4-development/: developer_guide.md
rustml/swets/docs/5-testing/: test_plan.md  testing_strategy.md
rustml/swets/main/src/: lib.rs
rustml/swets/tests/: grad_check_test.rs  training_test.rs
rustml/tokenizer/: Cargo.toml
rustml/tokenizer/main/src/: lib.rs
rustml/tokenizer/tests/: cli.rs
tutorial-app/: Cargo.toml
tutorial-app/assets/: styles.css
tutorial-app/main/src/: lib.rs  main.rs
tutorial-app/main/src/api/: types.rs
tutorial-app/main/src/core/: app.rs  components.rs  data.rs  mod.rs  state.rs
tutorial-app/main/src/saf/: mod.rs
(+297 files in other folders)
