[package]
name = "components"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "UI component library for rust-ui framework"

[lib]
path = "main/src/lib.rs"

[dependencies]
dioxus.workspace = true
uuid.workspace = true
