[package]
name = "rustml-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core tensor operations for RustML - a pure Rust machine learning library"

[lib]
path = "main/src/lib.rs"

[dependencies]
thiserror.workspace = true
rand.workspace = true
rustml-quant.workspace = true
half.workspace = true
bytemuck.workspace = true
rayon.workspace = true
smallvec.workspace = true
memmap2.workspace = true
faer = "0.20"
log.workspace = true

[dev-dependencies]
approx.workspace = true
