[package]
name = "rustml-gguf"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GGUF format parser for RustML - loads quantized models from the llama.cpp ecosystem"

[lib]
path = "main/src/lib.rs"

[[bin]]
name = "rustml-gguf-inspect"
path = "main/src/bin/gguf_inspect.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
rustml-quant.workspace = true
thiserror.workspace = true
memmap2.workspace = true
half.workspace = true
bytemuck.workspace = true
crc32fast.workspace = true
hf-hub.workspace = true

[dev-dependencies]
approx.workspace = true
