[package]
name = "rustml-hub"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HuggingFace Hub integration for loading pre-trained models"

[lib]
path = "main/src/lib.rs"

[[bin]]
name = "rustml-hub-cli"
path = "main/src/bin/hub_cli.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
rustml-core.workspace = true
rustml-gguf.workspace = true
thiserror.workspace = true
reqwest = { workspace = true, features = ["stream"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
futures-util.workspace = true
dirs.workspace = true
hf-hub.workspace = true
safetensors.workspace = true
memmap2.workspace = true
crc32fast.workspace = true

[dev-dependencies]
serde_json.workspace = true
