[package]
name = "rustml-nlp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "NLP models for RustML including GPT-2 and text generation"

[lib]
path = "main/src/lib.rs"

[dependencies]
rustml-core.workspace = true
rustml-nn.workspace = true
rustml-hub.workspace = true
rustml-gguf.workspace = true
thiserror.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
tokio.workspace = true
tokenizers.workspace = true

[[example]]
name = "gpt2_generate"
path = "examples/gpt2_generate.rs"

[[example]]
name = "unified_model_demo"
path = "examples/unified_model_demo.rs"

[[example]]
name = "gemma3_load"
path = "examples/gemma3_load.rs"

[[example]]
name = "gguf_inspect"
path = "examples/gguf_inspect.rs"

[[example]]
name = "gemma3_gguf"
path = "examples/gemma3_gguf.rs"

[[example]]
name = "tokenizer_verifier"
path = "examples/tokenizer_verifier.rs"
