[package]
name = "rustml-nn"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Neural network layers for RustML including attention mechanisms"

[lib]
path = "main/src/lib.rs"

[dependencies]
rustml-core.workspace = true
rustml-quant.workspace = true
thiserror.workspace = true
half.workspace = true
serde.workspace = true
log.workspace = true

[dev-dependencies]
approx.workspace = true
