[package]
name = "rustml-swets"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SWE Time Series - ML training framework for rustml"

[lib]
path = "main/src/lib.rs"

[dependencies]
rustml-core.workspace = true
thiserror.workspace = true
rand.workspace = true
log.workspace = true
smallvec.workspace = true

[dev-dependencies]
approx.workspace = true
