[package]
name = "rustml-tokenizer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tokenizer implementations for RustML — BPE, SentencePiece, HuggingFace"

[lib]
path = "main/src/lib.rs"

[dependencies]
rustml-gguf.workspace = true
thiserror.workspace = true
regex.workspace = true
serde_json.workspace = true
tokenizers.workspace = true
