[workspace]

[package]
name = "llmforge"
version = "0.1.0"
edition = "2021"

[dependencies]
faer = "0.13"
memmap2 = "0.9"
rand = "0.8"
rand_distr = "0.4"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rayon = "1.8"
crossbeam = "0.8"
half = { version = "2.3", features = ["bytemuck"] }
bytemuck = { version = "1", features = ["extern_crate_alloc"] }
num-traits = "0.2"
safetensors = "0.3"
tokenizers = "0.19"
crc32fast = "1.3"
smallvec = { version = "1.11", features = ["const_generics"] }

[dev-dependencies]
tempfile = "3.8"
bytemuck = { version = "1", features = ["extern_crate_alloc"] }
